@@ -1,8 +1,8 @@
 Package: FLa4a
 Type: Package
 Title: A Simple and Robust Statistical Catch at Age Model
-Version: 1.5.4
-Date: 2018-07-19
+Version: 1.6.0
+Date: 2018-09-27
 Authors@R: c(
   person("Colin P.", "Millar", email = "colinpmillar@googlemail.com", role = "aut"),
   person("Ernesto", "Jardim", email = "ernesto.jardim@ec.europa.eu", role = c("aut", "cre")))
@@ -64,4 +64,5 @@ Collate:
     'utilities.R'
     'gen-methods.R'
     'southern_hake-data.R'
+    'a4ase-sa.R'
 RoxygenNote: 6.0.1
