@@ -10,6 +10,8 @@ export(defaultN1mod)
 export(defaultVmod)
 export(defaultSRmod)
 export(a4aSCA)
+export(sca.sa)
+export(sep.sa)
 #export(makePrediction)
 #export(os.32or64bit)
 #export(os.type)
