@@ -1,3 +1,11 @@
+ FLa4a 1.6.x:
+
+ NEW FEATURES:
+ - method sca.sa to run stock assessments in a MP 
+ - method sep.sa to run separable stock assessments in a MP 
+ 
+ BUG FIXES:
+
  FLa4a 1.5.x:
 
  NEW FEATURES:
